Fixes to alignment of button for Signup Form on index page

--- a/themes/firma/assets/css/home2.css
+++ b/themes/firma/assets/css/home2.css
@@ -141,6 +141,17 @@ html {
     text-align: center;
 }
 
+.landing-section-action-container {
+    font-size: 1.2rem;
+    width: 100%;
+}
+
+.landing-section-action-button {
+
+}
+
+
+
 .l-foursquare {
     width:96%;
     padding: 2%;
@@ -349,9 +360,9 @@ html {
 .landing-early-access-block {
     width: 100%;
     background-color: #542DAE;
-    padding-top:2%;
+    padding-top:4%;
     color: #ffffff;
-    padding-bottom:2%;
+    padding-bottom:8%;
 }
 
 .landing-section-big-message {
@@ -385,11 +396,14 @@ html {
     margin-top: 0px;
 }
 .landing-early-access-email {
-    height: 2.3rem;
-    width: 20rem;
-    color: #000000;
-    padding-left: 10px;
+    height: 3rem;
+    width: 13rem;
+    color: #6B40CE;
     border-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 @media only screen and (min-width: 48rem) {
@@ -401,10 +415,14 @@ html {
         margin-top: -23px;
     }
     .landing-early-access-email {
-        height: 2.3rem;
-        width: 20rem;
-        padding-left: 10px;
+        height: 3rem;
+        width: 13rem;
+        color: #6B40CE;
         border-radius: 5px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
     }
     .f-button__early-access {
         margin-top:0px;
